Fixed answer card headers being blurry and weird scoll bug on larger screens

--- a/src/css/_form_logic.css
+++ b/src/css/_form_logic.css
@@ -1,7 +1,6 @@
 /* Set counter, this keeps track of correct answers */
 body {
-    counter-reset: inputs;
-    counter-reset: questions_answered;
+    counter-reset: inputs questions_answered;
 }
 
 .input_progress:checked {
